changed delete request and api.yaml
